# dive-map

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  DEPLOY.md  Dockerfile.frontend  Qgis2threejs.js  README.md  Simple Instructions.txt  custom.css  custom.js  deploy.sh  docker-compose.prod.yml  docker-compose.yml  index.html  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2a1b3c4d5e6f_add_landmarks.py  3b2c4d5e6f7a_landmark_description_image.py  4c3d5e6f7a8b_user_is_admin.py  979e121a7da7_initial_tables.py
backend/app/: auth.py  config.py  database.py  main.py  models.py
backend/app/api/: auth.py  dive_plans.py  landmarks.py  site_config.py  uploads.py  waypoints.py
backend/app/models/: __init__.py  dive_plan.py  dive_site.py  user.py  waypoint.py
backend/app/schemas/: auth.py  dive_plan.py  dive_site.py  landmark.py  waypoint.py
backend/tests/: conftest.py  test_auth.py  test_landmarks.py  test_plans.py  test_sites.py  test_waypoints.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/public/: site-config.json
frontend/src/: api-client.ts  config.test.ts  config.ts  hotkeys.ts  labels.ts  landmark-labels.ts  main.ts  measure-hooks.ts  mobile.ts  projection.ts  route-tubes.ts  safari-texture-fix.ts  segment-labels.test.ts  types.ts  (+2 more)
src/: api-client.ts  camera.ts  config.test.ts  config.ts  crs.test.ts  crs.ts  hotkeys.ts  labels.ts  main.ts  measure-hooks.ts  mobile.ts  segment-labels.ts  types.ts  waypoint-labels.ts
(+7 files in other folders)
